fix logo wrapping and bubbles overflowing outside of box on small resolutions
git-svn-id: https://cbilsvn.pmacs.upenn.edu/svn/apidb/OrthoMCLWebsite/trunk@54584 735e2a04-f8fc-0310-8a1b-f2942603c481

--- a/Site/htdocs/assets/css/OrthoMCL.css
+++ b/Site/htdocs/assets/css/OrthoMCL.css
@@ -28,6 +28,7 @@ a:hover, a:active {
 
 #header2 {
 	background-image: url(/assets/images/OrthoMCL/backgroundtop_s.jpg);
+	min-width: 1032px; /* prevent logo from wrapping on smaller resolutions */
 }
 
 #header_rt {
@@ -86,6 +87,11 @@ table#quick-search a {
 ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~*/
 #bubbles .info {
   min-height: 276px;
+  margin: auto;
+}
+
+#bubbles .infobottom {
+	margin: auto;
 }
 
 /*~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
